--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-toggle": "^0.1.4",
     "dark-mode-toggle": "^0.10.0",
     "framer-motion": "^6.3.4",
+    "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "next-mdx-remote": "^4.0.3",
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
