--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5"
   },
