--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-toggle": "^0.1.4",
+    "@types/gtag.js": "^0.0.10",
     "dark-mode-toggle": "^0.10.0",
     "framer-motion": "^6.3.4",
     "gray-matter": "^4.0.3",
